# synthia

./: .gitignore  Cargo.toml  README.md
src/: main.rs  stream.rs  synth.rs
