[package]
name = "synthia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
eframe = "0.21.3"
egui = "0.21.0"
fundsp = {version = "0.13.0", features=["default"] }
rodio = "0.17.1"
hound = "3.5.0"